--- a/src/SingleFlagPage/SingleFlagCard/SingleFlagCard.css
+++ b/src/SingleFlagPage/SingleFlagCard/SingleFlagCard.css
@@ -27,12 +27,12 @@
 .single-flag_info-section{
     width: 50%;
     height: 100%;
-    padding: 30px 20px;
+    padding: 30px 0;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    row-gap: 30px;
+    row-gap: 4vw;
 
     font-size: 16px;
 }
@@ -44,22 +44,56 @@
 
 .single-flag_info{
     width: 100%;
-    max-height: 140px;
 
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    row-gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1.1fr;
+    grid-template-rows: 1fr .3fr 1fr .3fr 1fr .3fr 1fr;
+    grid-template-areas: "region tld"
+                         ".      tld"
+                         "sub    curr"
+                         ".      curr"
+                         "cap    lang"
+                         ".      lang"
+                         "pop    .";
     column-gap: 20px;
 }
 
 .single-flag_category{
+    max-height: none;
     font-weight: 600;
 }
 
 .single-flag_data{
+    max-height: none;
     font-weight: 300;
+}
+
+.region{
+    grid-area: region;
+}
+
+.sub-region{
+    grid-area: sub;
+}
+
+.capital{
+    grid-area: cap;
+}
+
+.population{
+    grid-area: pop;
+}
+
+.tld{
+    grid-area: tld;
+}
+
+.currency{
+    grid-area: curr;
+}
+
+.language{
+    grid-area: lang;
 }
 
 .single-flag_neighbors{
@@ -87,18 +121,6 @@
     box-shadow: 0 0 3px 2px hsla(200, 15%, 8%, 0.12);
 }
 
-@media screen and (max-width: 1200px) {
-    .single-flag_info{
-        max-height: 180px;
-    }
-}
-
-@media screen and (max-width: 1075px) {
-    .single-flag_info{
-        max-height: 200px;
-    }
-}
-
 @media screen and (max-width: 1000px) {
     .single-flag-card{
         width: 70%;
@@ -110,7 +132,6 @@
 
     .single-flag_info-section{
         width: 100%;
-        padding: 30px 0;
     }
 
     .single-flag_image-positioner{
@@ -122,6 +143,8 @@
     }
 
     .single-flag_info{
-        max-height: none;
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
     }
 }
